--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ sites:
   - name: Vala Backend Health
     url: https://backend.vala.media/api/v1/health
     expectedStatusCodes:
-      - 200
+      - 404  # Temporarily changed to test Slack notifications
     maxResponseTime: 5000
     
   # - name: Vala Backend Liveness
