--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,18 +3,18 @@ repo: vala-backend-status
 
 sites:
   - name: Vala Backend Health
-    url: https://backend.vala.arianelabs.dev/api/v1/health
+    url: https://backend.vala.media/api/v1/health
     expectedStatusCodes:
       - 200
     maxResponseTime: 5000
     
   - name: Vala Backend Liveness
-    url: https://backend.vala.arianelabs.dev/api/v1/health/liveness
+    url: https://backend.vala.media/api/v1/health/liveness
     expectedStatusCodes:
       - 200
       
   - name: Vala Backend Readiness
-    url: https://backend.vala.arianelabs.dev/api/v1/health/readiness
+    url: https://backend.vala.media/api/v1/health/readiness
     expectedStatusCodes:
       - 200
 
