--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,28 +2,28 @@ owner: vaibhav0806
 repo: vala-backend-status
 
 sites:
-  - name: Vala Backend Health
+  - name: Overall Health
     url: https://backend.vala.media/api/v1/health
     expectedStatusCodes:
       - 200
     maxResponseTime: 5000
     
-  - name: Vala Backend Liveness
+  - name: Liveness
     url: https://backend.vala.media/api/v1/health/liveness
     expectedStatusCodes:
       - 200
       
-  - name: Vala Backend Readiness
+  - name: Readiness
     url: https://backend.vala.media/api/v1/health/readiness
     expectedStatusCodes:
       - 200
 
 status-website:
   baseUrl: /vala-backend-status
-  name: Vala Backend Status 
+  name: Backend Status 
   logoUrl: https://cdn.prod.website-files.com/66d3a0873f16fc3af8dd7d3c/679a24fa2c532b406d361f2c_VALA.svg
-  introTitle: "**Vala** Backend Status"
-  introMessage: Real-time monitoring of Vala backend services
+  introTitle: "**VALA** Backend Status"
+  introMessage: Real-time monitoring of VALA backend services
   navbar:
     - title: Status
       href: /
